<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="baseSettings"
        android:title="@string/baseSettings">

        <EditTextPreference
            android:id="@+id/phoneNumber"
            android:key="@string/phoneNumberKey"
            android:title="@string/phoneNumberTitle"
            android:summary="@string/phoneNumberSummary"
            android:dialogTitle="@string/phoneNumberDialogTitle"
            android:dialogMessage="@string/phoneNumberDialogMessage"
            android:defaultValue=""
            android:inputType="phone"
            />
        <EditTextPreference
            android:id="@+id/phonePin"
            android:key="@string/phonePinKey"
            android:title="@string/phonePinTitle"
            android:summary="@string/phonePinSummary"
            android:dialogTitle="@string/phonePinDialogTitle"
            android:dialogMessage="@string/phonePinDialogMessage"
            android:defaultValue="1513"
            android:inputType="number"
            />
        <EditTextPreference
            android:id="@+id/changePhonePin"
            android:key="@string/changePhonePinKey"
            android:title="@string/changePhonePinTitle"
            android:summary="@string/changePhonePinSummary"
            android:dialogTitle="@string/changePhonePinDialogTitle"
            android:dialogMessage="@string/changePhonePinDialogMessage"
            android:defaultValue="1513"
            android:inputType="number"
            />
        <EditTextPreference
            android:id="@+id/alarmDeviceName"
            android:key="@string/alarmDeviceNameKey"
            android:title="@string/alarmDeviceName"
            android:summary="@string/alarmDeviceNameSummary"
            android:dialogTitle="@string/alarmDeviceNameDialogTitle"
            android:dialogMessage="@string/alarmDeviceNameDialogMessage"
            android:inputType="text"
            />
        <Preference
            android:id="@+id/setTimeDateButton"
            android:key="@string/setTimeDateButton"
            android:title="@string/setTimeDateButtonTitle"
            android:summary="@string/setTimeDateButtonSummary"
            />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="phoneBook"
        android:title="@string/phoneBook">
        <PreferenceCategory android:title="@string/setvalues_title">
            <EditTextPreference
                android:id="@+id/phoneNumber1"
                android:key="@string/phoneNumber1Key"
                android:title="@string/phoneNumber1"
                android:summary="@string/phoneNumberSummary1"
                android:dialogTitle="@string/phoneNumberDialogTitle1"
                android:dialogMessage="@string/phoneNumberDialogMessage1"
                android:inputType="phone"
                />
            <EditTextPreference
                android:id="@+id/phoneNumber2"
                android:key="@string/phoneNumber2Key"
                android:title="@string/phoneNumber2"
                android:summary="@string/phoneNumberSummary2"
                android:dialogTitle="@string/phoneNumberDialogTitle2"
                android:dialogMessage="@string/phoneNumberDialogMessage2"
                android:inputType="phone"
                />
            <EditTextPreference
                android:id="@+id/phoneNumber3"
                android:key="@string/phoneNumber3Key"
                android:title="@string/phoneNumber3"
                android:summary="@string/phoneNumberSummary3"
                android:dialogTitle="@string/phoneNumberDialogTitle3"
                android:dialogMessage="@string/phoneNumberDialogMessage3"
                android:inputType="phone"
                />
            <EditTextPreference
                android:id="@+id/phoneNumber4"
                android:key="@string/phoneNumber4Key"
                android:title="@string/phoneNumber4"
                android:summary="@string/phoneNumberSummary4"
                android:dialogTitle="@string/phoneNumberDialogTitle4"
                android:dialogMessage="@string/phoneNumberDialogMessage4"
                android:inputType="phone"
                />
            <EditTextPreference
                android:id="@+id/phoneNumber5"
                android:key="@string/phoneNumber5Key"
                android:title="@string/phoneNumber5"
                android:summary="@string/phoneNumberSummary5"
                android:dialogTitle="@string/phoneNumberDialogTitle5"
                android:dialogMessage="@string/phoneNumberDialogMessage5"
                android:inputType="phone"
                />
            <EditTextPreference
                android:id="@+id/phoneNumber6"
                android:key="@string/phoneNumber6Key"
                android:title="@string/phoneNumber6"
                android:summary="@string/phoneNumberSummary6"
                android:dialogTitle="@string/phoneNumberDialogTitle6"
                android:dialogMessage="@string/phoneNumberDialogMessage6"
                android:inputType="phone"
                />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/actions_title">
            <Preference
                android:id="@+id/readoutAllNumbers"
                android:key="@string/readoutAllNumbers"
                android:title="@string/readoutAllNumbersTitle"
                android:summary="@string/readoutAllNumbersSummary"
                />
            <Preference
                android:id="@+id/resetAllNumbers"
                android:key="@string/resetAllNumbers"
                android:title="@string/resetAllNumbersTitle"
                android:summary="@string/resetAllNumbersSummary"
                />
            <EditTextPreference
                android:id="@+id/resetOneNumber"
                android:key="@string/resetOneNumberKey"
                android:title="@string/resetOneNumber"
                android:summary="@string/resetOneNumberSummary"
                android:dialogTitle="@string/resetOneNumberTitle"
                android:dialogMessage="@string/resetOneNumberMessage"
                android:inputType="number"
                />
        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="audio"
        android:title="@string/audio">
        <PreferenceCategory android:title="@string/setvalues_title">
            <EditTextPreference
                android:id="@+id/speakerVolume"
                android:defaultValue="6"
                android:dialogMessage="@string/audioDialogMessage"
                android:dialogTitle="@string/speakerVolumeDialogTitle"
                android:key="speakerVolume"
                android:title="@string/speakerVolumeTitle"
                android:inputType="number"
                />
            <EditTextPreference
                android:id="@+id/micSensitivity"
                android:defaultValue="6"
                android:dialogMessage="@string/audioDialogMessage"
                android:dialogTitle="@string/micSensitivityDialogTitle"
                android:key="micSensitivity"
                android:title="@string/micSensitivityTitle"
                android:inputType="number"
                />
            <ListPreference
                android:defaultValue="7"
                android:entries="@array/ringtoneMelodies"
                android:entryValues="@array/ringtoneMelodiesValues"
                android:key="ringtoneMelody"
                android:title="@string/ringtoneMelodyTitle"
                android:inputType="number"
                />
            <EditTextPreference
                android:id="@+id/ringtoneVolume"
                android:defaultValue="7"
                android:dialogMessage="@string/audioDialogMessage"
                android:dialogTitle="@string/ringtoneVolumeDialogTitle"
                android:key="ringtoneVolume"
                android:title="@string/ringtoneVolumeTitle"
                android:inputType="number"
                />
            <EditTextPreference
                android:id="@+id/alarmVolume"
                android:defaultValue="7"
                android:dialogMessage="@string/audioDialogMessage"
                android:dialogTitle="@string/alarmVolumeDialogTitle"
                android:key="alarmVolume"
                android:title="@string/alarmVolumeTitle"
                android:inputType="number"
                />
            <EditTextPreference
                android:id="@+id/remoteControlVolume"
                android:defaultValue="5"
                android:dialogMessage="@string/audioDialogMessage"
                android:dialogTitle="@string/remoteControlVolumeDialogTitle"
                android:key="remoteControlVolume"
                android:title="@string/remoteControlVolumeTitle"
                android:inputType="number"
                />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/actions_title">
            <Preference
                android:id="@+id/sendAudioSettings"
                android:key="@string/sendAudioSettingsButton"
                android:summary="@string/sendAudioSettingsButtonSummary"
                android:title="@string/sendAudioSettingsButtonTitle"
                />
            <Preference
                android:id="@+id/receiveAudioSettings"
                android:key="@string/receiveAudioSettingsButton"
                android:summary="@string/receiveAudioSettingsButtonSummary"
                android:title="@string/receiveAudioSettingsButtonTitle"
                />
            <Preference
                android:id="@+id/resetAudioSettings"
                android:key="@string/resetAudioSettingsButton"
                android:summary="@string/resetAudioSettingsButtonSummary"
                android:title="@string/resetAudioSettingsButtonTitle"
                />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>