<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_alarm_on" android:title="@string/action_alarm_on"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_alarm_off" android:title="@string/action_alarm_off"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_position" android:title="@string/action_update_position"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_status" android:title="@string/action_update_status"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rectangle" android:title="@string/action_rectangle"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
